fix: spacing quote

--- a/src/app/components/quote/quote.component.scss
+++ b/src/app/components/quote/quote.component.scss
@@ -1,9 +1,17 @@
+.quote-container {
+  padding-top: 8rem;
+  @media (max-width: 991.98px) {
+    padding-top: 1rem;
+  }
+}
+
 .quote {
-  padding: 5rem 0 0;
+  padding: 8rem 0 0;
   border-top: 1px solid var(--bs-gray-100);
   background-image: url(../../../assets/images/bg/quote_bg.png);
   background-repeat: no-repeat;
   background-size: cover;
+  min-height: 550px;
   &__logo {
     width: 30%;
   }
